corrected the line position

--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ header a {
     box-align: center;
     width: 180px;
     height: 2px;
+    position: absolute;
 }
 .imageicon{
     max-width: 100px;
@@ -92,6 +93,7 @@ header a {
     width: 410px;
     height: 2px;
     margin-right: 800px;
+    position: absolute;
 }
 .topSec{
     margin-left: 50px;
